# taisei

resources/00-taisei.pkgdir/gfx/stage5/: envmap.basis  metal_roughness.basis  stairs_ambient.basis  stairs_diffuse.basis  stairs_normal.basis  stairs_roughness.basis  wall.material  wall_ambient.basis  wall_depth.basis  wall_diffuse.basis  wall_normal.basis  wall_roughness.basis
resources/00-taisei.pkgdir/models/stage5/: wall.iqm
resources/00-taisei.pkgdir/models/stage6/: calabi-yau-quintic.iqm  stairs.iqm  top_plate.iqm
resources/00-taisei.pkgdir/shader/: meson.build  pbr_envmap.frag.glsl  ssr_water.frag.glsl  stage1_water.frag.glsl
resources/00-taisei.pkgdir/shader/lib/: frag_util.glslh  util.glslh
src/: boss.h  common_tasks.c  common_tasks.h  credits.c  stage.c  stagedraw.c  stageinfo.c  stageutils.c  stageutils.h
src/resource/: material.h
src/stages/: entities.h  meson.build
src/stages/stage2/: draw.c  timeline.c
src/stages/stage3/: stage3.c
src/stages/stage4/: draw.c  stage4.c
src/stages/stage5/: draw.c  stage5.c  timeline.c
src/stages/stage5/spells/: overload.c
src/stages/stage6/: background_anim.c  draw.c  draw.h  stage6.c  timeline.c
src/stages/stagex/: background_anim.c  draw.c  stagex.c  timeline.c
